--- a/templates/etc/hosts.j2
+++ b/templates/etc/hosts.j2
@@ -2,10 +2,11 @@
 
 # IPv4
 127.0.0.1 localhost
+{% set _hostname_fqdn = hostname_fqdn | string | trim %}}
 {% if ansible_all_ipv4_addresses | length > 0 %}
 {% for ipv4_address in ansible_all_ipv4_addresses -%}
 {% if ipv4_address not in hostname_hosts %}
-{{ ipv4_address }} {{ hostname_fqdn.split(".")[0] }} {{ hostname_fqdn }}
+{{ ipv4_address }} {{ _hostname_fqdn.split(".")[0] }} {{ _hostname_fqdn }}
 {% else -%}
 {% set _hostname=hostname_hosts.pop(ipv4_address) %}
 {{ ipv4_address }} {{ _hostname.split(".")[0] }} {{ _hostname }}
@@ -18,7 +19,7 @@
 {% if ansible_all_ipv6_addresses | length > 0 -%}
 {% for ipv6_address in ansible_all_ipv6_addresses -%}
 {% if ipv6_address not in hostname_hosts %}
-{{ ipv6_address }} {{ hostname_fqdn.split(".")[0] }} {{ hostname_fqdn }}
+{{ ipv6_address }} {{ _hostname_fqdn.split(".")[0] }} {{ _hostname_fqdn }}
 {% else -%}
 {% set _hostname=hostname_hosts.pop(ipv6_address) %}
 {{ ipv6_address }} {{ _hostname.split(".")[0] }} {{ _hostname }}
