Fixed hostname.j2 template.

--- a/templates/etc/hostname.j2
+++ b/templates/etc/hostname.j2
@@ -1,4 +1,4 @@
-{% set _hostname_fqdn = hostname_fqdn | string | trim %}}
+{% set _hostname_fqdn = hostname_fqdn | string | trim %}
 {% if _hostname_fqdn | length > 0 -%}
 {{ _hostname_fqdn.split(".")[0] }}
 {% else -%}
